selectBox() no longer repeats, but can't seed clicked cell. Also fixed repeating background image on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  background-image: url(images/ring.jpeg) 
+  background-image: url(images/ring.jpeg);
+  background-repeat: no-repeat;
 }
   
 .box {
